更正html中link的JS的路径。

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <script type="text/javascript" defer="defer" src="main.js"></script>
+    <script type="text/javascript" defer="defer" src="JavaScript/main.js"></script>
     <!-- 虽然defer属性设置了脚本被延迟到整个页面都解析完毕后再运行(避免先加载JS脚本再呈现页面),但是某些浏览器会忽略此属性,
     所以把延迟脚本置于body底部仍然是最佳选择 -->
 </body>
